--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="veiwport" content="width=device-width">
 	<title>Product</title>
-	<link rel="stylesheet" type="text/css" href="Product.css">
+	<link rel="stylesheet" type="text/css" href="product.css">
 </head>
 <body style="background-color: #b399">
 	<div class="container">
